# decision-layer

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  pyproject.toml  setup.py
.codex-plugin/: plugin.json
.github/scripts/: decision_pr_gate.py
.github/workflows/: decision-layer.yml
codex/skill/decision-layer/: SKILL.md
decision_layer/: __init__.py  cli.py  core.py  mcp.py
examples/: claude-code.yaml  codex.yaml  generic-shell.yaml  openhands.yaml  vague-onboarding-demo.md
skills/decision-layer/: SKILL.md
tests/: test_codex_packaging.py  test_core.py  test_mcp.py  test_repo_surfaces.py
